# shazware

./: .gitignore  README.md  _manif  app.pianocheetah.shazware.json  app.shaz.json  app.shaz.util.json  b  b.sh  c  cpp  do.txt  fb  fp2sh  fpak  r  rel  shazware_20220514-1_amd64.deb
_doc/: did.txt
_fpak/: app.shaz.shazware.json  fhub.sh
_fpak/share/applications/: app.shaz.shazware.ftx.desktop  app.shaz.shazware.l.desktop
_fpak/share/metainfo/: app.shaz.shazware.metainfo.xml
_meta/share/applications/: app.pianocheetah.shazware.big.desktop  app.pianocheetah.shazware.flatten.desktop  app.pianocheetah.shazware.ftx.desktop  app.pianocheetah.shazware.l.desktop  app.pianocheetah.shazware.ned.desktop  app.pianocheetah.shazware.recent.desktop  app.pianocheetah.shazware.renem.desktop  app.pianocheetah.shazware.undup.desktop  app.shaz.big.desktop  app.shaz.flatten.desktop  app.shaz.ftx.desktop  app.shaz.l.desktop  app.shaz.ned.desktop  app.shaz.recent.desktop  app.shaz.renem.desktop  app.shaz.shazware.big.desktop  app.shaz.shazware.flatten.desktop  app.shaz.shazware.ned.desktop  app.shaz.shazware.recent.desktop  app.shaz.shazware.renem.desktop  app.shaz.shazware.undup.desktop  app.shaz.undup.desktop  app.shaz.util.big.desktop  app.shaz.util.flatten.desktop  app.shaz.util.ftx.desktop  app.shaz.util.l.desktop  app.shaz.util.ned.desktop  app.shaz.util.recent.desktop  app.shaz.util.renem.desktop  app.shaz.util.undup.desktop
_meta/share/metainfo/: .app.shaz.shazware.metainfo.xml.kate-swp  app.shaz.shazware.metainfo.xml
big/: CMakeLists.txt  main.cpp
docs/: README.md  did.txt
flatten/: CMakeLists.txt  flatten.cpp  flatten.h
flatten/rc/: flatten.ui
ftx/: CMakeLists.txt  ftx.cpp  ftx.h  ftx.ui
ftx/rc/: .xdp-app.ico.xRCMAy-yGsWfC
l/: CMakeLists.txt  l.cfg  main.cpp
ned/: CMakeLists.txt  CmdBlk.cpp  CmdCsr.cpp  CmdEtc.cpp  CmdFile.cpp  CmdFind.cpp  CmdIns.cpp  CmdMap.cpp  SubCmd.cpp  ned.cpp  ned.h
recent/: CMakeLists.txt  main.cpp
renem/: CMakeLists.txt  renem.cpp  renem.h
renem/rc/: rc.qrc  renem.ui
shazware_20220514-1_amd64/opt/app/shazware/: big  ftx  l  ned  ned.desktop  recent  undup
undup/: CMakeLists.txt  undup.cpp  undup.h
zRel/: cpepi  debpi  shazware_20220708-1_armhf.deb
zRel/opt/app/shazware/: flatten  ftx
zRel/shazware_20220708-1_amd64/opt/app/shazware/: ned
zRel/shazware_20220708-1_armhf/DEBIAN/: control
zRel/shazware_20220708-1_armhf/opt/app/shazware/: ftx  ned  undup
zRel/usr/share/applications/: undup.desktop
zRelease/: cpe  shazware_20220514-1_armhf.deb  shazware_20220708-1_amd64.deb
zRelease/shazware_20220514-1_amd64/DEBIAN/: control
zRelease/shazware_20220514-1_amd64/opt/app/shazware/: flatten  renem  renem.desktop
zRelease/shazware_20220514-1_armhf/DEBIAN/: control
zRelease/shazware_20220514-1_armhf/opt/app/shazware/: ftx  l  recent  renem  renem.desktop  undup
zRelease/shazware_20220708-1_amd64/DEBIAN/: control
zRelease/shazware_20220708-1_amd64/opt/app/shazware/: flatten.desktop  renem  undup  undup.desktop
zRelease/shazware_20220708-1_amd64/usr/share/applications/: flatten.desktop
zRelease/shazware_20220708-1_armhf/opt/app/shazware/: big  flatten  ned  renem
zRelease/shazware_20220708-1_armhf/usr/share/applications/: ftx.desktop
